# symbolang

./: Logo.txt  README.md  hello.hi  hello.symb  if.symb  lex.py  pyproject.toml  symbolang.py  symbolism.py  test.symb
symbolang/: cli.py  symbolang.py
