[project]
name = "symbolang"
version = "0.1.4"
description = "A simple 2D programming language."
readme = "README.md"
authors = [
    { name = "thelegendofmario", email = "ethanfrancis577@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
symbolang = "symbolang.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
